--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
@@ -131,9 +131,9 @@
    ZB10:table_rows:35374, physical_range_rows:35404, logical_range_rows:35389, index_back_rows:176, output_rows:176, est_method:local_storage, optimization_method=cost_based, avaiable_index_name[IDX_ZB10_BAZ170,ZB10], pruned_index_name[IDX_ZB10_AAB001], estimation info[table_id:1113805279034827, (table_type:1, version:0-1672855210317669-1672855210317669, logical_rc:35374, physical_rc:35374), (table_type:7, version:1672855201148820-1672855201148820-1672855243647482, logical_rc:0, physical_rc:0), (table_type:7, version:1672855243647482-1672855243647482-1672858813210627, logical_rc:0, physical_rc:0), (table_type:5, version:1672855243647482-1672855243647482-1672858813210627, logical_rc:0, physical_rc:0), (table_type:0, version:1672858813210627-1672858813210627-9223372036854775807, logical_rc:15, physical_rc:30)]
    ```
 
-   由上述 `EXPALIN` 信息，可以得到该条 SQL 的执行总代价估算为 432961，代价主要体现在 `UNION ALL` 部分（代价估算为 397629），`UNION ALL` 的两个分支都包含 `NESTED-LOOP JOIN`，代价估算分别为 151990 和 236327。`UNION ALL` 部分第一个分支（包括 4 号到 11 号算子）的主要代价体现在通过索引 `ZB10(IDX_ZB10_BAZ170)` 去做 `TABLE SCAN` 的 11 号算子上面；第二个分支（包括 12 号到 14 号算子）的主要代价也体现在通过索引 `ZB10(IDX_ZB10_BAZ170)` 去做 `TABLE SCAN` 的 14 号算子上面。由此可见 11 号算子和 14 号算子都是由于 `ZB10` 的索引而导致代价整体偏高。
+   由上述 `EXPALIN` 信息，初步可以得到该条 SQL 的执行总代价估算为 432961，代价主要体现在 3 号算子 `UNION ALL` 部分（代价估算为 397629），`UNION ALL` 的两个分支都包含 `NESTED-LOOP JOIN`，代价估算分别为 151990 和 236327。`UNION ALL` 部分第一个分支（从 4 号到 11 号算子）的主要代价体现在通过索引 `ZB10(IDX_ZB10_BAZ170)` 去做 `TABLE SCAN` 的 11 号算子上面；第二个分支（从 12 号到 14 号算子）的主要代价也体现在通过索引 `ZB10(IDX_ZB10_BAZ170)` 去做 `TABLE SCAN` 的 14 号算子上面。由此可见 11 号算子和 14 号算子都是由于 `ZB10` 的索引而导致代价偏高，也是该性能问题的瓶颈点。
 
-   再进一步分析 11 号算子和 14 号算子的 Outputs & filters 信息，`range(MIN,MIN ; MAX,MAX)always true` 表明没有做索引匹配， `filter([20017476 = cast(cast(ZB10.BAZ170(0x7f0cb0ffa210), VARCHAR2(20 BYTE))(0x7f0cb1002fa0), NUMBER(-1, -85))(0x7f0cb1002770)(0x7f0cb1001c70)])` 表明在访问时产生数据类型的转换，由此得知关联字段的数据类型不统一而进行的数据类型的转换导致了不可走索引。
+   接下来进一步分析 11 号算子和 14 号算子的 Outputs & filters 信息，`range(MIN,MIN ; MAX,MAX)always true` 表明没有做索引匹配，而 `filter([20017476 = cast(cast(ZB10.BAZ170(0x7f0cb0ffa210), VARCHAR2(20 BYTE))(0x7f0cb1002fa0), NUMBER(-1, -85))(0x7f0cb1002770)(0x7f0cb1001c70)])` 表明在访问时产生数据类型的转换，由此得知关联字段的数据类型不统一而进行的数据类型的转换导致了不可走索引。
 
    ```sql
     11 - output(......), filter([20017476 = cast(cast(ZB10.BAZ170(0x7f3f5b51c090), VARCHAR2(20 BYTE))(0x7f3f5b51d6b0), NUMBER(-1, -85))(0x7f3f5b51ce80)(0x7f3f5b51c380)]), 
@@ -147,11 +147,11 @@
          range_key([ZB10.BAZ170(0x7f0cb0ffa210)], [ZB10.AAZ001(0x7f3f5b582c10)]), range(MIN,MIN ; MAX,MAX)always true // range: always true
    ```
 
-1. 对比 DDL 分析出现性能问题的原因。
+1. 对比相关表和视图的 DDL 分析出现性能问题的原因。
 
-   首先，分析视图 `V_AB01` 的定义中可知, `UNION ALL` 的第一个分支中 `zb10` 存在于 `NOT EXISTS` 子查询中，结合 `EXPLAIN` 信息，可以得出相关子查询被改写为 `NESTED-LOOP ANTI JOIN`。此外，视图 `V_AB01` 发生了 `TO_NUMBER` 转换，其中的 `aab001` 和 `aaz509` 会传递给索引 `ZB10(IDX_ZB10_BAZ170)`。
+   首先，分析视图 `V_AB01` 的定义中可知, `UNION ALL` 的第一个分支中 `zb10` 存在于 `NOT EXISTS` 子查询中，结合 `EXPLAIN` 信息，可以得出相关子查询被改写为 `NESTED-LOOP ANTI JOIN`。此外，视图 `V_AB01` 发生了 `TO_NUMBER` 转换，其中的 `aab001` 和 `aaz509` 会传递给 `ZB10` 的索引 `(IDX_ZB10_BAZ170)`。
 
-   接下来，分析表 `ZB10` 的定义可知，索引 `ZB10(IDX_ZB10_BAZ170)` 定义于 `ZB10` 字段，数据类型为 `VARCHAR2(20)`，而该字段就是视图 `V_AB01` 与其他表进行关联的字段，即在视图 `V_AB01` 定义的 `UNION ALL` 第一个分支中，11 号算子对应的关联 `"zb10"."baz170" = "ab01"."aab001" = 20017476`, 第二个分支中 14 号算子对应的关联 `"zb10"."baz170" = "abc1"."aaz509" = 20017476`，可见由于关联字段数据类型不一致而发生了 `TO_NUMBER` 转换，即将 `ZB10` 字段的 `VARCHAR2` 类型强制转换为了 `NUMBER`。
+   接下来分析表 `ZB10` 的定义可知，索引 `ZB10(IDX_ZB10_BAZ170)` 定义于 `BAZ170` 字段，数据类型为 `VARCHAR2(20)`，而该字段就是视图 `V_AB01` 与其他表进行关联的字段，即在视图 `V_AB01` 定义的 `UNION ALL` 第一个分支中，11 号算子对应的关联 `"zb10"."baz170" = "ab01"."aab001" = 20017476`, 第二个分支中 14 号算子对应的关联 `"zb10"."baz170" = "abc1"."aaz509" = 20017476`，可见是由于关联字段数据类型不一致而发生了 `TO_NUMBER` 转换，即将 `BAZ170` 字段的 `VARCHAR2` 类型强制转换为了 `NUMBER`。
 
    综合 DDL 信息和 `EXPALIN` 可知，To_number 强制转换导致索引性能下降，造成 11 号和 14 号算子的代价估算较大。
 
@@ -185,7 +185,7 @@
              "LOCAL_CXZX"."zb10" "ZB10"
       WHERE  ( "LOCAL_CXZX"."abc1"."aaz509" = "zb10"."baz170" ))
 
-   ; 
+      ; 
 
 
    /* 表 ABA1 的定义*/
