--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
@@ -9,7 +9,7 @@
 假设创建了资源池 `pool1` 和 `pool2` ，且其资源配置都是 `uc1`，可以通过修改资源池的资源配置的方式，将资源配置 `uc1` 的 `MAX_CPU` 调整为 `6`；`MIN_MEMORY` 调整为 `36G`，其他选项不变。示例语句如下：
 
 ```sql
-obclient> CREATE RESOURCE UNIT uc1 MAX_CPU 5, MIN_CPU 4, MEMORY_SIZE '36G';    
+obclient> CREATE RESOURCE UNIT uc1 MAX_CPU 5, MIN_CPU 4, MEMORY_SIZE '36G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;   
 obclient>CREATE RESOURCE POOL pool1 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('z1', 'z2');
 obclient>CREATE RESOURCE POOL pool2 UNIT 'uc1', UNIT_NUM 1, ZONE_LIST ('z3');
 obclient>CREATE TENANT tt resource_pool_list=('pool1','pool2');
@@ -43,14 +43,14 @@ obclient> ALTER RESOURCE POOL rp1 UNIT 'uc2';
   1. 创建一个资源配置 `u_c0`，并创建一个资源池 `pool1`，`pool1` 使用 `u_c0` 作为自己的资源配置。
 
      ```sql
-     obclient> CREATE RESOURCE UNIT u_c0 MAX_CPU 5, MIN_CPU 4, MAX_MEMORY '36G', MIN_MEMORY '32G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;
+     obclient> CREATE RESOURCE UNIT u_c0 MAX_CPU 5, MIN_CPU 4, MEMORY_SIZE '36G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;
      obclient> CREATE RESOURCE POOL pool1 unit='u_c0', unit_num=3, zone_list=('z1','z2','z3');
      ```
 
-  2. 调大 `u_c0` 的 `MIN_CPU`、`MAX_CPU`、`MIN_MEMORY` 或 `MAX_MEMORY`。
+  2. 调大 `u_c0` 的 `MIN_CPU`、`MAX_CPU` 和 `MEMORY_SIZE`。
 
      ```sql
-     obclient> ALTER RESOURCE UNIT u_c0 MAX_CPU 10, MIN_CPU 8, MAX_MEMORY '72G', MIN_MEMORY '64G';
+     obclient> ALTER RESOURCE UNIT u_c0 MAX_CPU 10, MIN_CPU 8, MEMORY_SIZE '72G';
      ```
 
      该调整旨在调大资源池 `pool1` 的资源规格，目的是提高相应租户的服务能力。
@@ -60,8 +60,8 @@ obclient> ALTER RESOURCE POOL rp1 UNIT 'uc2';
   1. 创建两个资源配置 `u_c0` 和 `u_c1`，并创建一个资源池`pool1`，`pool1` 使用 `u_c0` 作为自己的资源配置。
 
      ```sql
-     obclient> CREATE RESOURCE UNIT u_c0 MAX_CPU 5, MIN_CPU 4, MAX_MEMORY '36G', MIN_MEMORY '32G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;
-     obclient> CREATE RESOURCE UNIT u_c1 MAX_CPU 10, MIN_CPU 8, MAX_MEMORY '72G', MIN_MEMORY '64G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;
+     obclient> CREATE RESOURCE UNIT u_c0 MAX_CPU 5, MIN_CPU 4, MEMORY_SIZE '36G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;
+     obclient> CREATE RESOURCE UNIT u_c1 MAX_CPU 10, MIN_CPU 8, MEMORY_SIZE '72G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;
      obclient> CREATE RESOURCE POOL pool1 unit='u_c0', unit_num=3, zone_list=('z1','z2','z3');
      ```
 
