--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
@@ -7,10 +7,10 @@
 ## 语法
 
 ```sql
-CREATE TABLE [IF NOT EXISTS] table_name
+CREATE [TEMPORARY] TABLE [IF NOT EXISTS] table_name
       (table_definition_list) [table_option_list] [partition_option] [AS] select;
 
-CREATE TABLE [IF NOT EXISTS] table_name
+CREATE [TEMPORARY] TABLE [IF NOT EXISTS] table_name
       LIKE table_name;
 
 table_definition_list:
@@ -262,3 +262,29 @@ partition_count | subpartition_count:
   +-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
   1 row in set
   ```
+
+## MySQL 兼容模式 Private 临时表的使用限制
+
+MySQL 兼容模式下 Private 临时表暂无实际业务使用，使用风险较高，不推荐使用。
+
+### 性能和稳定性
+
+* MySQL 兼容模式临时表与普通表性能相同。
+* MySQL 兼容模式临时表使用时需要创建，多个 Session 同时创建临时表可能造成 RS 压力较大，击穿 RS 有稳定性风险。
+  
+### 创建临时表
+
+为了能让不同 Session 创建同名的 MySQL 兼容模式临时表，在字典表中额外维护 `session_id` 列，当表名相同但是 Session ID 不同时认为是可以共存的。
+创建 MySQL 兼容模式临时表时将当前 Session 的 Session ID 填入字典表的 `session_id` 列。
+
+### 临时表路由
+
+MySQL 兼容模式临时表和 Oracle 兼容模式临时表一样，当前 Session 访问临时表之后，后续 SQL 只能发往当前 Session。
+
+### 临时表数据清理
+
+当 Session 断开时会自动将本 Session 创建的临时表 `DROP` 掉。
+
+### 已知问题
+
+`CREATE TABLE AS SELECT` 中有临时表可能存在创建表为空的情况。
