--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
@@ -2,6 +2,85 @@
 
 #RNDate#2022-04-18
 
+## V3.2.3 BP9
+
+### 版本信息
+
+* 发布时间：2023 年 7 月 14 日
+* 版本号：V3.2.3 BP9
+* RPM 版本号：oceanbase-3.2.3.3-109000182023071410
+
+### 功能增强
+
+* MySQL 数据类型优化：新增支持 NCHAR/NVARCHAR 数据类型，并支持 `SELECT N'xxx'` 语法。
+
+### 行为变更
+
+* 在该版本中，IN 谓词抽取优化默认情况下关闭。当业务的 SQL 中确实存在大 IN 的场景，并且大 IN 的 SQL 在执行时间或者内存消耗上对业务造成了瓶颈时，可以通过将 `_enable_in_range_optimization` 配置项设置为 True，打开 IN 谓词抽取优化功能。
+
+### 配置项变更
+
+| 配置项 | 修改类型 | 默认值 | 描述 |
+| --- | --- | --- | --- |
+| max_trx_2pc_retry_interval | 新增 | 30s | 集群级配置项，用于表示事务两阶段提交中消息重试的最大时间间隔。当事务参与者过多的场景下，需要根据实际情况调大上限。 |
+| _optimizer_better_inlist_costing | 新增 | False | 租户级配置项，用于实时控制优化器是否打开 IN 表达式优化功能。 |
+| _enable_in_range_optimization | 新增 | False | 租户级配置项，用于控制是否开启 IN 谓词抽取 Query Range 的优化。 |
+
+### 缺陷修复
+
+* 优化 Inlist 数量过多，尤其是 IN 谓词也比较多的情况下，Query Range 抽取过多，导致查询性能差的问题。
+* 修复 TSC 时钟回退导致 Liboblog 清理任务一直没有触发，进而导致 500 租户内存占用过高的问题。
+* 修复在 ODC 中调试含有 CursorForLoop 的存储过程时，可能出现 observer 进程 `core dump` 的问题。
+* 修复查询使用 `/*!*/` 注释常量的 SQL 语句可能会导致 `core dump` 的问题。
+* 修复在 Oracle 租户模式下，使用 `TIMESTAMP` 或 `TIMESTAMP WITH LOCAL TIME ZONE` 数据类型作为主键的表开启 TDE 加密后，写入数据并产生的 Clog 被归档出去，物理恢复失败的问题。
+* 修复执行带有 GOTO（Oracle）/ITERATE（MySQL）语句的存储过程，循环次数过多导致栈溢出的问题。
+* 修复 Oracle 租户下，使用 JDBC V1.1.10.6 以下版本的 getBigDecimal 接口，在 Scale 设置为 0 后精度丢失的问题。
+* 修复 SUSE 平台下使用 PL debug 功能时可能发生 `core dump` 的问题。
+* 修复带有 “--” 注释换行的场景，会把下一行的数据误当作注释的问题。
+* 修复子分区表裁剪到单个子分区时，使用 PDML 执行 SQL 报错 -5284 的问题。
+* 修复使用 PS 协议执行 `alter table add partition` 操作时，如果新增分区的边界值表达式中包含需要进行隐式 Cast 转换的表达式，在新引擎下会导致分区添加操作失败的问题。
+* 修复 PL Resolve View 发生内存泄漏，导致 Package 编译报内存不足的问题。
+* 修复节点扩容后负载不均衡的问题。
+* 修复存储过程间断报错 -4201 的问题。
+* 修复带有子查询的 Update 报错 -4000 Common Error的问题。
+* 修复新增二级分区在 `DBA_OBJECTS` 中未显示，导致数据迁移时漏掉部分数据的问题。
+* 修复会话变量未恢复导致 SQL 执行报错 -6210 的问题。
+* 修复归档介质盘满，Clog 未归档已经回收时，内存累积无法释放，500 租户报错 -4013 的问题。
+* 修复 Plan Cache 没有 Evict，导致使用达到限制报错 -5226 的问题。
+* 修复了两个表都带有 IN 条件的等值连接场景下，重复的 IN 谓词无法去除导致生成的查询范围很大，进而 SQL 执行报错 -4019 Size Overflow 的问题。
+* 修复 PS Cursor 开启老引擎，导致执行计划不优的问题。
+* 修复 ResultSetMetaData 返回 Scale 和 Precision 与 Oracle 不一致的问题。
+* 修复了 Oracle 租户模式下，Public 同义词没有指定 DataBase 可能导致跨用户 Schema 识别错误的问题。
+* 修复在未命中任何分区的情况下，执行 `insert into select` 语句时，Oracle 租户会正常执行插入 0 行，但 OBServer 节点会报错的问题。
+* 修复了 `WM_CONCAT` 函数输出顺序与 Oracle 模式不一致的问题。
+* 修复自动清理任务正常调度时，预期被清理的 `backup_piece` 未删除问题。
+* 修复 CREATE RESOURCE UNIT 报错 Entry not exist 的问题。
+* 修复 Trigger 基表上带隐藏列，报错 -4016 的问题。
+* 修复远程 SQL 执行过程中如果对该表并行做 DDL 操作，会偶发报错 -4029 的问题。
+* 修复设置 `OCI_ATTR_FETCH_ROWID` 后，Plan Cache 未命中，导致 Package 调用报错的问题。
+* 修复租户数量很多的情况下，节点计时器任务超过 32 个时，无法设置租户配置项的问题。
+* 修复 ECS 宿主机硬件隐患发生热迁移，热迁移之后 NTP 时钟超前 2s，导致 RS 新选出的 Leader 上任不成功报 `clog role change timeout` 的问题。
+* 修复租户白名单（ob_tcp_invited_nodes）设置为 `1.1.1.1/24` 时，通过 `1.1.1.1` 登录失败的问题。
+* 修复  Package 编译报错 -4007 时，Alter Package 重新编译后，报错信息变成 `unknown error message. the system doesn't declare this msg` 的问题。
+* 修复 INSERT ALL 语句计划生成耗时长的问题。
+* 修复改写模块的 BUG，导致 SQL 执行时报错 -4016，需要添加 `no_rewrite hint` 才能正常执行 SQL 的问题。
+* 修复集群扩容，OBServer 节点启动但未得到有效的 `server_id` 时，PX 导致节点 Core 的问题。
+* 修复存储引擎中的物理行数估算问题。
+* 修复 Oracle 模式下 Rownum 查询报错的问题。
+* 修复两层同义词嵌套后 obproxy 无法获取路由信息的问题。
+* 修复了当 IN 子句包含多个参数值时，没有展开为 OR 条件，进而导致无法使用索引进行优化的问题。
+* 修复系统 TSC 时间异常导致备租户合并超时的问题。
+
+### 注意事项
+
+* 从 OceanBase V3.2.3 BP4 版本开始， 兼容 MySQL 的版本号的格式（例如：5.7.25-OceanBase-v3.2.3.1），周边配套工具请使用最新版本。
+* 从 OceanBase V3.2.3 BP5 版本开始 OBServer 节点支持文本 PS 功能，其配套的 obproxy 从V3.2.7.1 版本才能适配支持该功能。
+* 从 OceanBase V3.2.3 BP6 版本开始支持获取列的 Default 值，实现准确路由，其配套的 obproxy  从 V3.2.9 版本才能适配支持该功能。
+* 从 OceanBase V3.2.3 BP6 版本开始支持 KMS 存储加密功能。请先升级 Libloblog 版本到 V3.2.4 及以上版本，然后再升级 OBServer 节点到 V3.2.3 BP6 版本，否则该功能无法使用。
+* 使用 OceanBase V3.2.3 BP8 之后版本时，JDBC 需要升级到 V1.1.10.7 及以上版本。
+* 升级 OceanBase 数据库到本版本时，OCP 的版本必须是 V3.3.2 及以上版本。
+* 建议在单个 OBServer 节点上创建的分区数量不超过 10 万个。
+
 ## V3.2.3 BP8
 
 ### 版本信息
