--- a/zh-CN/700.reference/200.administrator-guide/100.database-connection-and-routing/200.obproxy-management/200.manage-obproxy-clusters/100.create-an-obproxy-cluster.md
+++ b/zh-CN/700.reference/200.administrator-guide/100.database-connection-and-routing/200.obproxy-management/200.manage-obproxy-clusters/100.create-an-obproxy-cluster.md
@@ -57,7 +57,7 @@
 
    3. 打开 **参数设置**，添加或修改启动参数和其它参数。
 
-      有关其他参数的详细信息，请参见 [配置参数](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784)。有关启动参数的详细信息，请参见 [OBProxy 参数说明](../2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md)。
+      有关其他参数的详细信息，请参见 [配置参数](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784)。有关启动参数的详细信息，请参见 [OBProxy 参数说明](../400.odp-cluster-parameters.md)。
 
       ![4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/400ce/obproxy%E5%8F%82%E6%95%B0%E8%AE%BE%E7%BD%AE1.png)
 
