--- a/zh-CN/700.reference/200.administrator-guide/700.management/100.scale-out-and-scale-in/300.scale-in-and-scale-out-of-tenant-resources/200.by-modifying-unit_num.md
+++ b/zh-CN/700.reference/200.administrator-guide/700.management/100.scale-out-and-scale-in/300.scale-in-and-scale-out-of-tenant-resources/200.by-modifying-unit_num.md
@@ -8,8 +8,7 @@
 
 * 由于空闲的资源池会被计算为占用的资源，故在扩容前，如果有租户被删除，建议与租户对应的资源池也一并删除，以便释放资源。
 
-  删除资源池的相关操作请参见 [删除资源池](../../../2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md
-)。
+  删除资源池的相关操作请参见 [删除资源池](../../../200.basic-database-management/300.manage-resources/500.manage-resource-pools/700.delete-a-resource-pool.md)。
   
 * 查看集群中资源的分配情况，了解集群中资源的使用情况。
 
