--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/3.set-variables.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/3.set-variables.md
@@ -45,14 +45,14 @@ SET VARIABLE_NAME = 'VALUE'
 SET GLOBAL VARIABLE_NAME = 'VALUE'
 ```
 
-You can execute SQL statements to set session-level and global variables. Example:
+You can execute SQL statements to set session-level and global variables. For example:
 
 ```sql
 obclient> SET ob_query_timeout = 20000000;
 obclient> SET GLOBAL ob_query_timeout = 20000000;
 ```
 
-The value of some global or session-level variables are of the `INT` type and is set to `ON/OFF` or `True/False` in the `SHOW VARIABLE` command. You can set these variables in the following way. Example:
+The value of some global or session-level variables are of the `INT` type and is set to `ON/OFF` or `True/False` in the `SHOW VARIABLE` command. You can set these variables in the following way. For example:
 
 ```sql
 SET foreign_key_checks = ON;
@@ -86,7 +86,7 @@ opt_set_sys_var:
   {SET | SET VARIABLES | VARIABLES} system_var_name = expr [,system_var_name = expr] ...
 ```
 
-When you create a tenant, set the value of read-only variable `ob_compatibility_mode` to `mysql` or `oracle` and the value of global variable `ob_tcp_invited_nodes` to `%`. Example:
+When you create a tenant, set the value of read-only variable `ob_compatibility_mode` to `mysql` or `oracle` and the value of global variable `ob_tcp_invited_nodes` to `%`. For example:
 
 ```sql
 obclient> CREATE TENANT IF NOT EXISTS test_tenant
@@ -106,7 +106,7 @@ SET ob_compatibility_mode='oracle', ob_tcp_invited_nodes='%';
    SHOW GLOBAL VARIABLES [LIKE 'pattern' | WHERE expr]
    ```
 
-   You can execute SQL statements to query session-level and global variables. Example:
+   You can execute SQL statements to query session-level and global variables. For example:
 
    ```sql
    obclient> SHOW VARIABLES LIKE 'ob_query_timeout';
@@ -129,25 +129,25 @@ SET ob_compatibility_mode='oracle', ob_tcp_invited_nodes='%';
    | Variable_name | The name of the variable. |
    | Value | The value of the variable. |
 
-<main id="notice" type='explain'>
+  <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>If you log on to the sys tenant and then execute the <code>ALTER SYSTEM CHANGE TENANT</code> statement to switch to a user tenant, the session-level variables obtained through a query are still the session-level variables of the sys tenant, but the global variables obtained through a query are global variables of the user tenant. For more information about the <code>ALTER SYSTEM CHANGE TENANT</code> statement, see SQL Syntax. </p>
-</main>
+    <p>If you log on to the <code>sys</code> tenant and then execute the <code>ALTER SYSTEM CHANGE TENANT</code> statement to switch to a user tenant, the session-level variables obtained through a query are still the session-level variables of the <code>sys</code> tenant, but the global variables obtained through a query are global variables of the user tenant. For more information about the <code>ALTER SYSTEM CHANGE TENANT</code> statement, see SQL Syntax. </p>
+  </main>
 
-* You can execute the `SELECT` statement to view session-level and global variables from the related views of the current tenant. Syntax:
+* You can execute the `SELECT` statement to view session-level and global variables from the related views of the current tenant. The syntax is as follows:
 
    ```sql
    SELECT * FROM view_name WHERE VARIABLE_NAME = '[var name]'
    ```
 
-   In Oracle mode, you can execute the `SELECT` statement to view session-level and global variables from the related views of the current tenant. Example:
+   In Oracle mode, you can execute the `SELECT` statement to view session-level and global variables from the related views of the current tenant. For example:
 
    ```sql
    obclient> SELECT * FROM SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
    obclient> SELECT * FROM SYS.TENANT_VIRTUAL_SESSION_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
    ```
 
-   In MySQL mode, you can execute the `SELECT` statement to view session-level and global variables from the related views of the current tenant. Example:
+   In MySQL mode, you can execute the `SELECT` statement to view session-level and global variables from the related views of the current tenant. For example:
 
    ```sql
    obclient> SELECT * FROM INFORMATION_SCHEMA.GLOBAL_VARIABLES WHERE VARIABLE_NAME = 'ob_query_timeout';
