--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/4.recommended-general-system-parameters.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/4.recommended-general-system-parameters.md
@@ -2,7 +2,7 @@
 
 This topic describes the general system parameters and variables in OceanBase Database.
 
-## Cluster parameters
+## Cluster-level parameters
 
 * `memory_limit`: specifies the maximum memory available in OceanBase Database. The value of `memory_limit` is unlimited. If `memory_limit` is set to a value greater than the total physical memory, other values calculated based on `memory_limit` will be excessively large.
 
@@ -28,7 +28,7 @@ This topic describes the general system parameters and variables in OceanBase Da
       obclient> ALTER SYSTEM SET system_memory='30G';
       ```
 
-* `rootservice_memory_limit`: specifies the maximum memory available to RootService.
+* `rootservice_memory_limit`: specifies the maximum memory available to Root Service.
 
    * Default value: `2G`
 
@@ -88,7 +88,7 @@ This topic describes the general system parameters and variables in OceanBase Da
       obclient> ALTER SYSTEM max_syslog_file_count=0;
       ```
 
-* `enable_sql_audit`: specifies whether to enable SQL Audit.
+* `enable_sql_audit`: specifies whether to enable SQL auditing.
 
    * Default value: `True`
 
@@ -160,7 +160,7 @@ This topic describes the general system parameters and variables in OceanBase Da
       obclient> ALTER SYSTEM syslog_level=INFO;
       ```
 
-## Tenant parameters
+## Tenant-level parameters
 
 * `freeze_trigger_percentage`: specifies the threshold of memory used by tenants for triggering a global freeze.
 
@@ -439,7 +439,7 @@ This topic describes the general system parameters and variables in OceanBase Da
       obclient> SET GLOBAL ob_plan_cache_percentage=5;
       ```
 
-* `ob_sql_audit_percentage`: specifies the maximum percentage of the SQL audit memory to the total memory of the current tenant.
+* `ob_sql_audit_percentage`: specifies the maximum percentage of the SQL auditing memory to the total memory of the current tenant.
 
    * Default value: `3`.
 
@@ -451,7 +451,7 @@ This topic describes the general system parameters and variables in OceanBase Da
       obclient> SET GLOBAL ob_sql_audit_percentage=3;
       ```
 
-* `ob_enable_sql_audit`: specifies whether to enable SQL auditing for the current tenant. When the parameter is set to `False`, SQL audit is disabled for all tenants.
+* `ob_enable_sql_audit`: specifies whether to enable SQL auditing for the current tenant. When the parameter is set to `False`, SQL auditing is disabled for all tenants.
 
    * Default value: `True`
 
@@ -523,7 +523,7 @@ This topic describes the general system parameters and variables in OceanBase Da
       obclient> SET GLOBAL validate_password_number_count=0;
       ```
 
-* validate_password_policy: specifies the password check strategy. The value `LOW` indicates to implement only general password checks. The value `Medium` indicates to check the password length, the number of uppercase letters, lowercase letters, digits, special characters, and the password resemblance to the username.
+* `validate_password_policy`: specifies the password check strategy. The value `LOW` indicates to implement only general password checks. The value `Medium` indicates to check the password length, the number of uppercase letters, lowercase letters, digits, special characters, and the password resemblance to the username.
 
    * Default value: `LOW`
 
@@ -548,8 +548,8 @@ This topic describes the general system parameters and variables in OceanBase Da
       ```
 
 * `resource_manager_plan`: specifies whether to activate the resource management plan. The CPU quota for limiting the user activities in a resource group varies based on the resource management plan.
-
-   Common threads and parallel threads within a tenant tend to preempt CPU resources from each other. Specifying a resource isolation plan for the tenant can control the resource preemption strategy and limit the resource usage.
+   
+   Regular and parallel execution threads within a tenant compete for CPU resources. By specifying resource isolation plans for tenants, you can control the strategies for resource contention and limit resource usage.
 
    * Default value: ""
 
