--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/6.recommended-configuration-of-minimum-resource-parameters.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/6.recommended-configuration-of-minimum-resource-parameters.md
@@ -1,6 +1,6 @@
 # Minimum resource configurations
 
-This topic provides reference minimum resource configurations by taking the minimum hardware configurations of a server as an example.
+This topic describes the minimum resource configuration that we recommend based on the minimum hardware configuration of a server.
 
 ## Minimum hardware configurations of a server
 
@@ -11,12 +11,13 @@ The following table lists the minimum configurations of a server based on produc
 | Server quantity | 3 |
 | CPU | 8 cores |
 | Memory | 64 GB |
-| Disk | We recommend that you use SSDs with a space of 1 TB or over 4 times the memory size. |
+| Disk | We recommend that you use SSDs and the disk space must be greater than four times the memory size. 1 TB is recommended.
+|
 | NIC | 10 Gbit/s Ethernet or faster |
 | Operating system | Red Hat Enterprise Linux Server V7.2 (Linux kernel V3.10.0 and later) |
 | File system | We recommend that you use EXT4 or XFS. |
 
-## Maximum memory available
+<!-- ## Maximum memory available
 
 **Description**
 
@@ -24,28 +25,28 @@ You can use the `memory_limit` parameter to adjust the maximum memory available 
 
 **Recommended configuration**
 
-`58G`
+`58G` is recommended.
 
 **Configuration method**
 
-Set the startup parameter `memory_limit` when a cluster starts.
+Set the startup parameter `memory_limit` when a cluster starts. -->
 
-## sys tenant memory
+## `sys` tenant memory
 
 **Description**
 
-The minimum memory recommended is 64 GB and OceanBase Database exclusively occupies 58 GB. We recommend that you set the memory available for the sys tenant to 4 GB.
+The minimum memory recommended is 16 GB. We recommend that you set the memory available for the `sys` tenant to 2 GB.
 
 **Recommended configuration**
 
-`4G`
+`2G` is recommended.
 
 **Configuration method**
 
 Execute the following statement:
 
 ```sql
-obclient> ALTER RESOURCE UNIT sys_unit_config MEMORY_SIZE='4G';
+obclient> ALTER RESOURCE UNIT sys_unit_config MEMORY_SIZE='2G';
 ```
 
 ## Program running memory
@@ -56,7 +57,7 @@ You can use the `system_memory` parameter to configure the memory allocated to t
 
 **Recommended configuration**
 
-`22G`
+`6G` is recommended.
 
 **Configuration method**
 
@@ -70,7 +71,7 @@ You can use the `stack_size` parameter to set the execution stack memory size fo
 
 **Recommended configuration**
 
-`1M`. In an environment that requires the minimum memory, you can set it to `512K`. However, reducing the memory may bring about some risks.
+`1M` is recommended. In an environment that requires the minimum memory, you can set it to `512K`. However, reducing the memory may bring about some risks.
 
 **Configuration method**
 
@@ -82,7 +83,7 @@ Set the startup parameter `stack_size` when a cluster starts.
 
 You can use the `__easy_memory_limit` parameter to configure the network framework memory.
 
-<main id="notice" type='explain'>
+  <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>The parameter is in the <code>_xx_xx</code> format, which means that it is a hidden parameter and cannot be queried by using the <code>SHOW PARAMETERS</code> statement. However, you can view the parameter by executing the following SQL statement: </p>
   </main>
@@ -93,7 +94,7 @@ obclient> SELECT * FROM oceanbase.__all_virtual_sys_parameter_stat WHERE name='_
 
 **Recommended configuration**
 
-`4G`
+`4G` is recommended.
 
 **Configuration method**
 
@@ -135,9 +136,9 @@ You can use the `cpu_count` and `workers_per_cpu_quota` parameters to configure 
 
 **Recommended configuration**
 
-* `cpu_count`: For an environment with a 64 GB memory, we recommend that you set it to a value between 16 and 32.
+* `cpu_count`: For an environment with a 16 GB memory, we recommend that you set it to a value between 16 and 32.
 
-* `workers_per_cpu_quota`: For an environment with a 64 GB memory, we recommend that you set it to `10`.
+* `workers_per_cpu_quota`: For an environment with a 16 GB memory, we recommend that you set it to `10`.
 
 **Configuration method**
 
@@ -154,7 +155,7 @@ cpu_count=16,\
 workers_per_cpu_quota=10'
 ```
 
-Parameters:
+The parameters are described as follows:
 
 * `-p` specifies the port number for direct connection.
 
