--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md
@@ -16,7 +16,7 @@ The following table describes privileges of different tenants to view and modify
 
 | Tenant type | Parameters that can be viewed | Parameter that can be configured                                                                                                                                                                                                |
 |------|---------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| sys tenant | Cluster-level parameters and tenant-level parameters<blockquote>**Note**<br> You can specify the `TENANT` keyword in the `SHOW PARAMETERS` statement to view the parameter settings of a specified tenant.</blockquote> | Cluster-level parameters and tenant-level parameters<blockquote>**Note**<br>You can specify the `TENANT` keyword under the sys tenant to modify the tenant-level parameters of all tenants or a specified tenant. </blockquote> |
+| `sys` tenant | Cluster-level parameters and tenant-level parameters<blockquote>**Note**<br> You can specify the `TENANT` keyword in the `SHOW PARAMETERS` statement to view the parameter settings of a specified tenant.</blockquote> | Cluster-level parameters and tenant-level parameters<blockquote>**Note**<br>You can specify the `TENANT` keyword under the <code>sys</code> tenant to modify the tenant-level parameters of all tenants or a specified tenant. </blockquote> |
 | User tenant | Cluster-level parameters, and tenant-level parameters of the current tenant | Tenant-level parameters of the current tenant                                                                                                                                                                                   |
 
 The following table describes the data types of parameters in OceanBase Database.
@@ -58,7 +58,7 @@ Parameters:
 
    * `BOTH`: indicates that the parameter value is modified in both the internal table and the memory. The modification takes effect immediately and remains effective after the OBServer node is restarted.
 
-* `TENANT`: used in the sys tenant to specify the tenants whose tenant-level parameters are to be modified. Valid values:
+* `TENANT`: used in the `sys` tenant to specify the tenants whose tenant-level parameters are to be modified. Valid values:
 
    * `ALL`: all tenants.
 
@@ -68,12 +68,12 @@ Parameters:
 
 * `ZONE`: indicates that the parameter is modified for the specific server type of the specified cluster. If this parameter is not specified, the parameter is modified for the specific server type of all clusters.
 
-<main id="notice" type='explain'>
+  <main id="notice" type='explain'>
     <h4>Note</h4>
     <ul>
     <li>When you modify multiple parameters at a time, separate the parameters with commas (,). </li>
-    <li>You can set cluster-level parameters only in the <code>sys</code> tenant. You cannot set cluster-level parameters in a user tenant or perform this operation in a sys tenant by specifying a user tenant. For example, the <code>ALTER SYSTEM SET memory_limit='100G' TENANT='test_tenant'</code> statement will cause an error because <code>memory_limit</code> is a cluster-level parameter. </li>
-    <li>You can modify tenant-level parameters directly in the current tenant or in the sys tenant by specifying the <code>TENANT</code> keyword. </li>
+    <li>You can set cluster-level parameters only in the <code>sys</code> tenant. You cannot set cluster-level parameters in a user tenant or perform this operation in a <code>sys</code> tenant by specifying a user tenant. For example, the <code>ALTER SYSTEM SET memory_limit='100G' TENANT='test_tenant'</code> statement will cause an error because <code>memory_limit</code> is a cluster-level parameter. </li>
+    <li>You can modify tenant-level parameters directly in the current tenant or in the <code>sys</code> tenant by specifying the <code>TENANT</code> keyword. </li>
     <li>The <code>ALTER SYSTEM</code> statement allows you to specify either a zone or an OBServer node, not both. You can specify only one zone or OBServer node at a time. If you do not specify a zone or an OBServer node, the modification of a cluster-level parameter takes effect on all OBServer nodes in the cluster, and the modification of a tenant-level parameter takes effect on the OBServer node where the current tenant is deployed in the cluster. </li>
     <li>The value of the <code>scope</code> parameter in the execution results of the <code>SHOW PARAMETERS</code> statement specifies whether a parameter is a cluster-level or tenant-level parameter.</li>
     <ul>
@@ -81,7 +81,7 @@ Parameters:
     <li>If the value of <code>scope</code> is <code>TENANT</code>, the parameter is a tenant-level parameter. </li>
     </ul>
     </ul>
-</main>
+  </main>
 
 ### Examples
 
@@ -103,17 +103,17 @@ Modify the `log_disk_utilization_threshold` parameter for a specified OBServer n
 obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20 SERVER='XXX.XXX.XXX.XXX:XXXXX';
 ```
 
-You can modify a tenant-level parameter for all tenants or a specified tenant in the sys tenant: Example:
+Modify a tenant-level parameter for all tenants or a specified tenant in the sys tenant:
 
 ```sql
 obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20 TENANT='ALL';
 obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20 TENANT='Oracle';
 ```
 
-<main id="notice" type='explain'>
+  <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>After the statement is executed, the parameter is modified for all the specified tenants. </p>
-</main>
+  </main>
 
 ### Oracle mode
 
@@ -129,16 +129,16 @@ Parameters:
 
 * `expression`: the value of the parameter after modification.
 
-<main id="notice" type='explain'>
+  <main id="notice" type='explain'>
     <h4>Note</h4>
     <ul>
     <li>When you modify multiple parameters at a time, separate the parameters with commas (,). </li>
     <li>In Oracle mode, you can set only tenant-level parameters. For more information about the tenant-level parameters, see <strong>System parameters</strong> in System Reference. </li>
     <li>You can modify tenant-level parameters directly in the current tenant or in the sys tenant by specifying the <code>TENANT</code> keyword. </li>
     </ul>
-</main>
+  </main>
 
-### **Examples**
+### Example
 
 Modify the `log_disk_utilization_threshold` parameter:
 
@@ -157,13 +157,13 @@ SHOW PARAMETERS [LIKE 'pattern' | WHERE expr] [TENANT = tenant_name]
 <main id="notice" type='explain'>
     <h4>Note</h4>
     <ul>
-    <li>In the sys tenant, you can query the tenant-level and cluster-level parameters of the current tenant. You can also query parameters of all tenants or a specified tenant by specifying the <code>TENANT</code> keyword. </li>
-    <li>In a user tenant, you can query the tenant-level parameters of the current tenant and cluster-level parameters of the sys tenant. </li>
+    <li>In the <code>sys</code> tenant, you can query the tenant-level and cluster-level parameters of the current tenant. You can also query parameters of all tenants or a specified tenant by specifying the <code>TENANT</code> keyword. </li>
+    <li>In a user tenant, you can query the tenant-level parameters of the current tenant and cluster-level parameters of the <code>sys</code> tenant. </li>
     <li>A column attribute specified in the <code>WHERE expr</code> clause must be a column attribute in the execution results of the <code>SHOW PARAMETERS</code> statement. </li>
     </ul>
 </main>
 
-Examples for querying parameters by using the `SHOW PARAMETERS` statement:
+Here is an example for querying parameters by using the `SHOW PARAMETERS` statement:
 
 ```sql
 obclient> SHOW PARAMETERS WHERE scope = 'tenant';
@@ -190,8 +190,8 @@ The following table describes the column attributes in the execution results.
 | data_type | The data type of the parameter. Valid values: `NUMBER`, `STRING`, `CAPACITY`, and so on. |
 | value | The value of the parameter. <br>**Note**<br> You can modify the parameter value for a specified zone or server. Therefore, the value of the parameter may vary with zones and servers.  |
 | info | The description of the parameter. |
-| section | The category of the parameter. Valid values: <ul><li>`SSTABLE`: an SSTable-related parameter. </li><li> `OBSERVER`: an OBServer node-related parameter.    </li><li>`ROOT_SERVICE`: a RootService-related parameter. </li><li> `TENANT`: a tenant-related parameter.    </li><li>`TRANS`: a transaction-related parameter. </li><li> `LOAD_BALANCE`: a load balancing-related parameter.    </li><li>`DAILY_MERGE`: a major compaction-related parameter. </li><li> `CLOG`: a clog-related parameter.    </li><li>`LOCATION_CACHE`: a location cache-related parameter. </li><li> `CACHE`: a cache-related parameter.    </li><li>`RPC`: an RPC-related parameter. </li><li> `OBPROXY`: an ODP-related parameter. </li></ul> |
-| scope | The application scope of the parameter. Valid values: Tenant and Cluster. <ul><li>`TENANT`: indicates that the parameter is a tenant-level parameter.</li><li> `CLUSTER`: indicates that the parameter is a cluster-level parameter.</li></ul> |
+| section | The category of the parameter. Valid values: <ul><li>`SSTABLE`: an SSTable-related parameter. </li><li> `OBSERVER`: an OBServer node-related parameter.    </li><li>`ROOT_SERVICE`: a Root Service-related parameter. </li><li> `TENANT`: a tenant-related parameter.    </li><li>`TRANS`: a transaction-related parameter. </li><li> `LOAD_BALANCE`: a load balancing-related parameter.    </li><li>`DAILY_MERGE`: a major compaction-related parameter. </li><li> `CLOG`: a clog-related parameter.    </li><li>`LOCATION_CACHE`: a location cache-related parameter. </li><li> `CACHE`: a cache-related parameter.    </li><li>`RPC`: an RPC-related parameter. </li><li> `OBPROXY`: an ODP-related parameter. </li></ul> |
+| scope | The application scope of the parameter. Valid values: `TENANT` and `CLUSTER`. <ul><li>`TENANT`: indicates that the parameter is a tenant-level parameter.</li><li> `CLUSTER`: indicates that the parameter is a cluster-level parameter.</li></ul> |
 | source | The source of the current value. Valid values: <ul><li>`TENANT`</li><li> `CLUSTER`   </li><li>`CMDLINE`</li><li> `OBADMIN`   </li><li>`FILE`</li><li> `DEFAULT`  </li></ul> |
 | edit_level | Defines the modification behavior of the parameter. Valid values:<ul><li>`READONLY`: indicates that you cannot modify the parameter. </li><li> `STATIC_EFFECTIVE`: indicates that you can modify the parameter but the modification takes effect only after the OBServer node is restarted. </li><li>  `DYNAMIC_EFFECTIVE`: indicates that you can modify the parameter and the modification takes effect in real time. </li></ul> |
 
