--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/5.recommended-default-production-parameter-configuration.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/5.recommended-default-production-parameter-configuration.md
@@ -18,7 +18,7 @@ The server configurations vary by users based on different production standards.
 
 ## TP-based scenarios
 
-### Cluster parameters
+### Cluster-level parameters
 
 * `system_memory`: specifies the size of the system memory space reserved for the `sys500` tenant.
 
@@ -32,7 +32,7 @@ The server configurations vary by users based on different production standards.
       obclient> ALTER SYSTEM SET system_memory='30G';
       ```
 
-* `rootservice_memory_limit`: specifies the maximum memory available to RootService.
+* `rootservice_memory_limit`: specifies the maximum memory available to Root Service.
 
    * Recommended value: `2G`
 
@@ -116,7 +116,7 @@ The server configurations vary by users based on different production standards.
       obclient> ALTER SYSTEM SET enable_rebalance=True;
       ```
 
-### Tenant parameters
+### Tenant-level parameters
 
 * `freeze_trigger_percentage`: specifies the threshold of memory used by tenants for triggering a global freeze.
 
@@ -271,7 +271,7 @@ The server configurations vary by users based on different production standards.
 
 ## AP-based scenarios
 
-### Cluster parameters
+### Cluster-level parameters
 
 * `trace_log_slow_query_watermark`: specifies the query execution time threshold. A query whose execution time exceeds this threshold is considered a slow query. Trace logs of slow queries are written to system logs.
 
@@ -353,7 +353,7 @@ The server configurations vary by users based on different production standards.
       obclient> ALTER SYSTEM SET micro_block_merge_verify_level=0;
       ```
 
-* `enable_sql_audit`: specifies whether to enable SQL Audit.
+* `enable_sql_audit`: specifies whether to enable SQL auditing.
 
    * Recommended value: `False`
 
@@ -389,7 +389,7 @@ The server configurations vary by users based on different production standards.
       obclient> ALTER SYSTEM SET cache_wash_threshold='30GB';
       ```
 
-### Tenant parameters
+### Tenant-level parameters
 
 * `undo_retention`: specifies the time range in seconds of data versions to be retained by the system. This variable is used to control the collection of data of multiple versions in minor compactions.
 
@@ -405,7 +405,7 @@ The server configurations vary by users based on different production standards.
 
 ### System variable
 
-You may configure the basic variables for the sys tenant based on the following description:
+You may configure the basic variables for the `sys` tenant based on the following description:
 
 * `ob_query_timeout`: specifies the query timeout duration in microseconds.
 
