--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
@@ -4,13 +4,7 @@
 
 ## 前提条件
 
-在执行全量数据备份前，您需要进行以下事项：
-
-* 确认当前已开启归档模式，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份。
-
-  查看日志归档任务状态的相关操作请参见 [查看归档进度](../3.log-archive/6.view-log-archive-progress.md)。
-
-  开启归档模式的相关操作请参见 [开启归档模式](../3.log-archive/3.open-the-log-archive-mode.md)。
+在执行全量数据备份前，您需要确认当前已开启归档模式，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份，查看日志归档任务状态的相关操作请参见 [查看归档进度](../3.log-archive/6.view-log-archive-progress.md)。如果确认未开启归档模式，开启归档模式的相关操作请参见 [开启归档模式](../3.log-archive/3.open-the-log-archive-mode.md)。
   
 ## 备份准备（可选）
 
