--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/2.quick-start-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/2.quick-start-of-ob-operator.md
@@ -4,7 +4,9 @@
 
 ## 前提条件
 
-开始之前请准备一套可用的 Kubernetes 集群。
+开始之前请准备一套可用的 Kubernetes 集群，有至少一个节点打上 `ob.zone=test` 的 label, 并且至少可以分配 2C, 10G 内存以及 100G 存储空间。
+
+给节点打 label 可以通过如下命令 `kubectl label node xxx ob.zone=test`。
 
 ## 部署 ob-operator
 
@@ -76,7 +78,7 @@ kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/
 kubectl get obcluster ob-test -o yaml
 ```
 
-返回结果中所有容器的 status 处于 ready 状态时表示部署成功。
+返回结果中的 status 处于 ready 状态时表示部署成功。
 
 ```shell
 status:
