--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/2.cluster-scale-out-of-ob-operator/1.adding-a-zone-to-a-cluster-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/2.cluster-scale-out-of-ob-operator/1.adding-a-zone-to-a-cluster-of-ob-operator.md
@@ -16,7 +16,7 @@
 
 ## 操作步骤
 
-假如当前集群中共包含 3 个可用区 zone1、zone2、zone3，且三个 Zone 都属于同一个 Region，每个 Zone 内包含 1 个 OBServer 节点。现在希望将 3 个可用区扩容成为 5 个可用区。
+假如当前集群中共包含 3 个可用区 zone1、zone2、zone3，每个 Zone 内包含 1 个 OBServer 节点。现在希望将 3 个可用区扩容成为 5 个可用区。
 
 1. 修改配置文件 obcluster.yaml，在 spec 内增加 zone4、zone5。
 
@@ -98,4 +98,4 @@
   sapp-ob-test-cn-zone5-0   2/2     Running   0          8m9s
   ```
 
-  增加的 Zone4、zone5 所对应的 READY 为 2/2 ，STATUS 为 Running 时，则表示成功在集群内增加 `zone4、zone5` 。
+  增加的 Zone4、zone5 所对应的 POD 状态 READY 为 2/2 ，STATUS 为 Running 时，则表示成功在集群内增加 `zone4、zone5` 。
