--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/2.cluster-scale-out-of-ob-operator/2.add-an-observer-nodes-to-the-zone-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/2.cluster-scale-out-of-ob-operator/2.add-an-observer-nodes-to-the-zone-of-ob-operator.md
@@ -14,7 +14,7 @@
 
 ## 操作步骤
 
-假设当前集群中共包含 3 个可用区 zone1、zone2、zone3，每个 Zone 内包含 1 个 OBServer 节点。现在希望向每个 Zone 内添加 1 台 OBServer 节点来扩容，则扩容后，3 个 Zone 内均包含 2 台 OBServer 节点。
+假设当前集群中共包含 3 个可用区 zone1、zone2、zone3，每个 Zone 内包含 1 个 OBServer 节点。现在希望向每个 Zone 添加 1 台 OBServer 节点来扩容，则扩容后，3 个 Zone 内均包含 2 台 OBServer 节点。
 
 1. 修改配置文件 obcluster.yaml，每个 zone 对应的 replicas 由 1 修改为 2。
 
@@ -86,5 +86,5 @@
   sapp-ob-test-cn-zone3-1   2/2     Running   0          3m39s
   ```
 
-  通过上述结果可看到，`zone1、zone2、zone3` 都存在 2 个 OBServer 节点，并且 READY 都为 2/2，STATUS 为 Running，则表示扩容成功。
+  通过上述结果可看到，`zone1、zone2、zone3` 都存在 2 个 OBServer 的 Pod，并且状态都为 READY 2/2，STATUS  Running，表示扩容成功。
   
