--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/3.cluster-scale-in-of-ob-operator/1.reduce-zone-from-cluster-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/3.cluster-scale-in-of-ob-operator/1.reduce-zone-from-cluster-of-ob-operator.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>本方案仅适用于 Zone 数量大于 3 的场景，如果集群中 Zone 的数量小于 3，则会出现不满足多数派的情况，数据一致性无法得到保证。在进行集群的缩容操作前，需要确认集群中资源对当前负载有较多冗余。</p>
+  <p>删除 Zone 之前，需要确保要删除的 zone 当中已经没有租户有副本。</p>
 </main>
 
 从集群中减少 Zone 的操作可以通过修改 OceanBase 集群配置文件 obcluster.yaml 来完成。
@@ -13,7 +13,7 @@
 
 ## 操作步骤
 
-假如当前集群中共包含 5 个可用区 `zone1、zone2、zone3、zone4、zone5`，且五个 Zone 都属于同一个 Region，每个 Zone 内包含 1 个 OBServer 节点。现在希望将 5 个可用区缩容成为 3 个可用区。
+假如当前集群中共包含 5 个可用区 `zone1、zone2、zone3、zone4、zone5`，每个 Zone 内包含 1 个 OBServer 节点。现在希望将 5 个可用区缩容成为 3 个可用区。
 
 1. 修改配置文件 obcluster.yaml，减少 `zone4、zone5`。
 
@@ -94,5 +94,5 @@ kubectl apply -f obcluster.yaml
   sapp-ob-test-cn-zone3-0   2/2     Running   0          8m9s
   ```
 
-  根据上述结果得出，集群内只存在 `zone1、zone2、zone3`，`zone4、zone5` 已减少。
+  根据上述结果得出，集群内只存在 `zone1、zone2、zone3`，`zone4、zone5` 已成功删除。
   
