--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/4.delete-cluster-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/4.delete-cluster-of-ob-operator.md
@@ -27,7 +27,7 @@
 
 3. 查看集群及相关资源是否删除。
 
-    删除集群的操作还会对应的删除相关联的资源，在执行了删除集群之后，可以确认集群相关的资源被成功删除。
+    删除集群的操作还会对应的删除相关联的资源，在执行了删除集群之后，可以通过以下命令确认集群相关的资源被成功删除。
 
     * 查看 pod 被成功删除。
 
