--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/5.upgrade-cluster-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/5.upgrade-cluster-of-ob-operator.md
@@ -41,7 +41,7 @@ spec:
     - name: obagent-conf-file
       size: 1Gi
       storageClassName: local-path
-  tag: v4.1.0.0-100000192023032010  ## 修改此处的版本号为升级后的版本号
+  tag: v4.1.0.0-100000192023032010  ## 修改此处的值为要升级的镜像 tag
   topology:
   - cluster: cn
     parameters:
