--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/1.create-tenant-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/1.create-tenant-of-ob-operator.md
@@ -22,7 +22,7 @@ kubectl apply -f tenant.yaml
 
 创建名为 obtenant 的一个 3 副本的 MySQL 租户，并指定允许任何客户端 IP 连接该租户。
 
-创建租户时，会根据配置文件 tenant.yaml 中的 topology 为其中的每一个 zone 创建一个关联的 resource unit 和 resource pool。其中创建 resource unit 所需要的的规格配置即为 resource 下的配置项；创建 resource pool 所需要的配置中 unit 为该 zone 对应的 resource unit、unit_num 为 unitNum 配置项、zone_list 即为该 zone。
+创建租户时，ob-operator 会根据配置文件 tenant.yaml 中的 topology 按照 zone 来创建对应的 resource unit 和 resource pool。根据 resource 下的配置项来创建 resource unit 并以此作为资源规格来创建 resource pool。
 
 ```yaml
 apiVersion: cloud.oceanbase.com/v1
