--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/3.cluster-scale-in-of-ob-operator/2.decrease-observer-node-from-zone-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/3.cluster-scale-in-of-ob-operator/2.decrease-observer-node-from-zone-of-ob-operator.md
@@ -2,7 +2,7 @@
 
 本节主要介绍如何通过从 Zone 中减少 OBServer 节点的方式进行集群的缩容。
 
-在进行集群的缩容操作前，需要确认集群中资源对当前负载有较多冗余、
+在进行集群的缩容操作前，需要确认要删除 Observer 节点的 Zone 仍有充足的资源来承载租户的负载。
 
 从 Zone 中减少 OBServer 节点的操作可以通过修改 OceanBase 集群配置文件 obcluster.yaml 来完成。通常需要从每个 Zone 内减少相等数量的 OBServer 节点。
 
@@ -79,5 +79,5 @@
   sapp-ob-test-cn-zone2-0   2/2     Running   0          84m
   ```
 
-  通过上述结果可看到，`zone1、zone2、zone3` 只存在 1 个 OBServer 节点，并且 READY 都为 2/2，STATUS 为 Running，则表示缩容成功。
+  通过上述结果可看到，`zone1、zone2、zone3` 只存在 1 个 OBServer 节点，并且 READY 都为 2/2，STATUS 为 Running，表示缩容成功。
   
