--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/1.resource-management-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/1.resource-management-of-ob-operator.md
@@ -92,9 +92,7 @@
 
 ## 修改资源池 unit num
 
-通过 ob-operator 修改资源池，则是调整资源池 unit num 的个数。
-
-在修改资源池 unit num 前需要保证对应的 Zone 内有足够的 OBServer 节点，如何在 zone 内添加 OBServer 节点可参考 [向 Zone 内添加 OBServer 节点](https://yuque.antfin-inc.com/ylz01380183/sg3eas/thrtzrh0vu2rhu5g)。
+在增加资源池 unit num 前需要保证对应的 Zone 内有足够的 OBServer 节点，如何在 zone 内添加 OBServer 节点可参考 [向 Zone 内添加 OBServer 节点](https://yuque.antfin-inc.com/ylz01380183/sg3eas/thrtzrh0vu2rhu5g)。
 
 ### 操作步骤
 
