--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -2,7 +2,8 @@
 
 ## 标识符长度限制
 
-* MySQL 模式
+:::tab
+tab MySQL 模式
 
   | **数据项** | **最大长度** |
   |---------|----------|
@@ -16,8 +17,7 @@
   | 视图名     | 64 字节    |
   | 别名      | 255 字节   |
   | 表组名     | 128 字节   |
-
-* Oracle 模式
+tab Oracle 模式
 
   | **类型** | **最大长度** |
   |--------|----------|
@@ -31,6 +31,7 @@
   | 别名     | 255 字节   |
   | 对象名    | 128 字节   |
   | 表组名    | 128 字节   |
+:::
 
 ## ODP(OceanBase Database Proxy) 最大连接数限制
 
@@ -65,26 +66,35 @@
 
 ## 字符串类型限制
 
-* MySQL 模式
+:::tab
+tab MySQL 模式
 
-  |   **类型**    | **最大长度** |
-  |-------------|----------|
-  | `CHAR`      | 256 字节   |
-  | `VARCHAR`   | 1048576 字节 |
-  | `BINARY`    | 256 字节   |
-  | `VARBINARY` | 1048576 字节 |
-  | `BLOB`      | 536870911 字节 |
-  | `TEXT`      | 536870911 字节 |
+  |   **类型**    | **最大长度**     |
+  |---------------|------------------|
+  | `CHAR`        | 256 字节         |
+  | `VARCHAR`     | 1048576 字节     |
+  | `BINARY`      | 256 字节         |
+  | `VARBINARY`   | 1048576 字节     |
+  | `TINYBLOB`    | 255 字节         |
+  | `BLOB`        | 65536 字节       |
+  | `MEDIUMBLOB`  | 16777216 字节    |
+  | `LONGBLOB`    | 536870911 字节   |
+  | `TINYTEXT`    | 256 字节         |
+  | `TEXT`        | 65536 字节       |
+  | `MEDIUMTEXT`  | 16777216 字节    |
+  | `LONGTEXT`    | 536870911 字节   |  
+tab Oracle 模式
 
-* Oracle 模式
-
-  |   **类型**    | **最大长度** |
-  |-------------|----------|
+  |   **类型**  | **最大长度**|
+  |-------------|------------|
   | `CHAR`      | 2000 字节  |
+  | `NCHAR`     | 2000 字节  |
   | `VARCHAR`   | 32767 字节 |
   | `VARCHAR2`  | 32767 字节 |
-  | `NCHAR`     | 2000 字节  |
   | `NVARCHAR2` | 32767 字节 |
+  | `BLOB`      | 536870911 字节 |
+  | `CLOB`      | 536870911 字节 |
+:::
 
 ## 功能使用限制
 
