--- a/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/4.partition-of-oracle-mode/2.partition-key-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/4.partition-of-oracle-mode/2.partition-key-of-oracle-mode.md
@@ -1,4 +1,4 @@
-# 分区键 
+# 分区键
 
 分区键是一个或多个列的集合，用于确定分区表中的每一行所在的分区。每一行都明确地分配给一个分区。
 
@@ -6,3 +6,6 @@
 
 OceanBase 数据库使用分区键自动将插入、更新和删除操作定向到相应的分区。
 
+## 相关文档
+
+更多有关分区键的信息，请参见 [分区类型](3.partition-of-oracle-mode.md)。
