--- a/zh-CN/600.manage/600.backup-and-recovery/400.data-backup/200.initiate-full-data-backup.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/400.data-backup/200.initiate-full-data-backup.md
@@ -8,6 +8,8 @@
 
 * 确认当前已开启日志归档，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份。
 
+  查看日志归档任务状态的相关操作请参见 [查看归档进度](../300.log-archive/600.view-log-archive-progress.md)。
+
   开启日志归档的相关操作请参见 [开启日志归档](../300.log-archive/300.initiate-log-archive.md)。
   
 ## 备份准备（可选）
