update disk space

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -35,7 +35,7 @@
 
 ## 前提条件
 
-在连接 OceanBase 数据库之前，请您确认以下信息：
+在部署 OceanBase 数据库之前，请您确认以下信息：
 
 * 您的机器满足软硬件要求。详细信息，参考 [软硬件要求](1.requirements-for-software-and-hardware.md)。
 
@@ -127,7 +127,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>本文以 OBD V2.1.1 为例提供操作指导。不同 OBD 版本的配置文件可能不同，请以实际配置文件为准。更多 OBD 相关内容请参见 <a href="https://www.oceanbase.com/docs/obd-cn">OBD 文档</a>。</p>
+  <p>本文以 OBD V2.2.0 为例提供操作指导。不同 OBD 版本的配置文件可能不同，请以实际配置文件为准。更多 OBD 相关内容请参见 <a href="https://www.oceanbase.com/docs/obd-cn">OBD 文档</a>。</p>
 </main>
 
 如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包，all-in-one 安装包提供的组件已经经过相互适配测试，为官方推荐版本。
