--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/2.configure-the-log-transport-service/1.set-log-restore-source.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/2.configure-the-log-transport-service/1.set-log-restore-source.md
@@ -8,7 +8,7 @@
 
 ## 基于日志归档的物理备库的场景
 
-通过物理备份恢复功能创建的备租户，在执行 `RESTORE` 命令恢复出备租户时已为备租户设置了默认的恢复源，即默认恢复源为主租户或源端的备租户的日志归档目的端，故通常不需要再设置。如果需要将日志恢复源修改为直接指向主租户或源端的备租户，请参考本文中 [基于网络的物理备库的场景](#基于网络的物理备库的场景的场景) 的内容重新进行设置。
+通过物理备份恢复功能创建的备租户，在执行 `RESTORE` 命令恢复出备租户时已为备租户设置了默认的恢复源，即默认恢复源为主租户或源端的备租户的日志归档目的端，故通常不需要再设置。如果需要将日志恢复源修改为直接指向主租户或源端的备租户，请参考本文中 **基于网络的物理备库的场景** 的内容重新进行设置。
 
 对于使用其他方式（创建空备租户和使用 `BACKUP DATABASE PLUS ARCHIVELOG` 功能创建备租户）创建的备租户，如果需要将日志恢复源设置为使用主租户的日志归档，则需要参考以下操作手动设置日志恢复源。
 
@@ -42,7 +42,7 @@
 
 ## 基于网络的物理备库的场景的场景
 
-通过创建空备租户的方式创建的备租户，在执行 `CREATE STANDBY TENANT` 命令时已通过 `LOG_RESTORE_SOURCE` 参数设置了一个默认的日志恢复源，即默认恢复源为直接指向主租户，故通常不需要再设置。如果仍需要将日志恢复源修改为使用主租户的日志归档，则需要您手动重新设置日志恢复源。
+通过创建空备租户的方式创建的备租户，在执行 `CREATE STANDBY TENANT` 命令时已通过 `LOG_RESTORE_SOURCE` 参数设置了一个默认的日志恢复源，即默认恢复源为直接指向主租户，故通常不需要再设置。如果仍需要将日志恢复源修改为使用主租户的日志归档，则需要您参考本文中 **基于日志归档的物理备库的场景** 重新设置日志恢复源。
 
 对于使用其他方式（使用备份恢复功能创建备租户和使用 `BACKUP DATABASE PLUS ARCHIVELOG` 功能创建备租户）创建的备租户，如果需要将日志恢复源设置为指向主租户或源端的备租户，则需要参考以下操作通过 `ALTER SYSTEM SET LOG_RESTORE_SOURCE` 命令手动设置日志恢复源。
 
