--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/0.configuration-items-and-system-variables-overview.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/0.configuration-items-and-system-variables-overview.md
@@ -16,7 +16,7 @@ OceanBase 数据库的配置项分为集群级配置项和租户级配置项。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>配置项一般分为动态生效和重启生效两种方式，大部分配置项为动态生效方式，即不需要重启 OBServer 节点即可生效。</p>
+  <p>配置项一般分为动态生效和重启生效两种方式，大部分配置项为动态生效方式，即不需要重启 OBServer 节点就可以生效。</p>
 </main>
 
 ### 配置项查询
@@ -47,9 +47,27 @@ obclient> SHOW PARAMETERS LIKE 'max_syslog_file_count';
 
 OceanBase 数据库的系统变量分为全局变量和 Session 变量。
 
-* 全局变量：表示 Global 级别的修改，数据库同一租户内的不同用户共享全局变量。全局变量的修改不会随会话的退出而失效。此外，全局变量修改后，对当前已打开的 Session 不生效，需要重新建立 Session 才能生效。
+* Global 变量：表示 Global 级别的修改，数据库同一租户内的不同用户共享全局变量。全局变量的修改不会随会话的退出而失效。此外，全局变量修改后，对当前已打开的 Session 不生效，需要重新建立 Session 才能生效。
 
 * Session 变量：表示 Session 级别的修改。当客户端连接到数据库后，数据库会复制全局变量来自动生成 Session 变量。Session 变量的修改仅对当前 Session 生效。
+
+### 系统变量查询
+
+查询某个系统变量的方法如下：
+
+* MySQL 模式下
+
+    ```sql
+    obclient> SHOW VARIABLES LIKE 'ob_query_timeout';
+    obclient> SHOW GLOBAL VARIABLES LIKE 'ob_query_timeout';
+    ```
+
+* Oracle 模式下
+
+    ```sql
+    obclient> SELECT * FROM SYS.TENANT_VIRTUAL_SESSION_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
+    obclient> SELECT * FROM SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
+    ```
 
 ## 配置项与系统变量的区分
 
@@ -68,6 +86,6 @@ OceanBase 数据库的系统变量分为全局变量和 Session 变量。
 
 * 有关配置项的查看和设置操作，请参见 [设置参数](../../7.reference/2.system-management/2.configuration-management/2.set-parameters.md) 章节。
 
-* 有关变量的详细参数介绍，请参见 [系统变量总览](2.system-variable/2.system-variable-overview.md)。
+* 有关系统变量的详细参数介绍，请参见 [系统变量总览](2.system-variable/2.system-variable-overview.md)。
 
 * 有关系统变量的查看和设置操作，请参见 [设置变量](../../7.reference/2.system-management/2.configuration-management/3.set-variables.md) 章节。
